tests/baselines/reference/unicodeExtendedEscapesInStrings24_ES6.errors.txt
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings24_ES6.ts(1,27): error TS1199: Unterminated Unicode escape sequence.


==== tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings24_ES6.ts (1 errors) ====
    var x = "\u{00000000000067
                              
!!! error TS1199: Unterminated Unicode escape sequence.
    